RESOLVED FIXED50544
REGERSSION (r73310?): Contents of <select> popup menus are upside-down on Windows
https://bugs.webkit.org/show_bug.cgi?id=50544
Summary REGERSSION (r73310?): Contents of <select> popup menus are upside-down on Win...
Adam Roben (:aroben)
Reported 2010-12-05 12:50:57 PST
To reproduce: 1. Go to data:text/html,%3Cselect%3E%3Coption%3EA%3Coption%3EB 2. Click on the <select> The popup menu's contents are upside-down.
Attachments
Patch (4.19 KB, patch)
2010-12-06 11:57 PST, Anders Carlsson
mitz: review+
Sam Weinig
Comment 1 2010-12-05 17:49:04 PST
I blame BackingStore changes :)
Adam Roben (:aroben)
Comment 2 2010-12-06 04:20:19 PST
Adam Roben (:aroben)
Comment 3 2010-12-06 08:56:52 PST
Looks like this affects the find indicator, too.
mitz
Comment 4 2010-12-06 09:02:04 PST
There's a separate bug about the find indicator.
Adam Roben (:aroben)
Comment 5 2010-12-06 09:06:48 PST
(In reply to comment #4) > There's a separate bug about the find indicator. I think Mitz is referring to bug 50524.
Anders Carlsson
Comment 6 2010-12-06 11:57:39 PST
Anders Carlsson
Comment 7 2010-12-06 12:02:03 PST
Committed revision r73383.
Note You need to log in before you can comment on or make changes to this bug.