REGERSSION (r73310?): Contents of <select> popup menus are upside-down on Windows https://bugs.webkit.org/show_bug.cgi?id=50544 <rdar://problem/8732336>

Reviewed by Dan Bernstein.

* Shared/BackingStore.cpp:
* Shared/BackingStore.h:
* Shared/cairo/BackingStoreCairo.cpp:
Remove BackingStore::createFlippedGraphicsContext.

* WebProcess/WebCoreSupport/win/WebPopupMenuWin.cpp:
(WebKit::WebPopupMenu::setUpPlatformData):
Don't create a flipped graphics context.

Canonical link: https://commits.webkit.org/63803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73383 268f45cc-cd09-0410-ab3c-d52691b4dbfc