WebKit2/Shared/cairo/BackingStoreCairo.cpp
@@ -38,12 +38,6 @@ PassOwnPtr<GraphicsContext> BackingStore::createGraphicsContext()
     return 0;
 }
 
-PassOwnPtr<GraphicsContext> BackingStore::createFlippedGraphicsContext()
-{
-    notImplemented();
-    return 0;
-}
-
 void BackingStore::paint(GraphicsContext&, const IntPoint&, const IntRect&)
 {
     notImplemented();
